add object detect algorithm ,but exist some problems when run in VideoGrabThread.